kubernetes/apps/observability/grafana/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Monitoring and observability platform
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: sh-grafana.svg
    gethomepage.dev/name: Grafana
    gethomepage.dev/app: grafana
spec:
  hostnames:
    - grafana.hemma.dev
  parentRefs:
    - name: internal
      namespace: networking
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
